--- a/dos.html
+++ b/dos.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>dos</h1>
-    <a href="dos.html">index</a>
+    <a href="index.html">index</a>
+    <a href="tres.html">tres</a>
 </body>
 </html>
